syntax = "proto3";

package jot.v1;

import "google/protobuf/timestamp.proto";

message Empty {}

message Tag {
  int64 tag_id = 1;
  string name = 2;
}

message Jot {
  int64 jot_id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string content = 4;
  bool pinned = 5;
  bool deleted = 6;
  Tag tag = 7;
}

message CreateJotRequest {
  string tagName = 1;
  string content = 2;
}

message ListJotsRequest {
  int64 page = 1;
  int64 page_size = 2;
}

message ListJotsResponse {
  repeated Jot jots = 1;
}

message FindTagsRequest {
  optional string search_term = 1;
}

message FindTagsResponse {
  repeated Tag tags = 1;
}

service JotService {
  rpc CreateJot (CreateJotRequest) returns (Jot) {}
  rpc ListJots (ListJotsRequest) returns (ListJotsResponse) {}
}

service TagService {
  rpc FindTags (FindTagsRequest) returns (FindTagsResponse) {}
}